crates/monochange_integration_tests/tests/snapshots/changelog_streams__notes_explicit_file.snap
---
source: crates/monochange_integration_tests/tests/changelog_streams.rs
expression: "normalize_head_commit(workspace.path(),\nstd::fs::read_to_string(destination).unwrap_or_else(|error|\npanic!(\"explicit notes file: {error}\")),)"
---
## sdk 2.0.0 (2026-09-02)

### App features

- **Preview collectible art before publishing.** Creators can review artwork and metadata before making a project live.
  _Owner:_ test · _Introduced in:_ [COMMIT]
