crates/monochange_integration_tests/tests/snapshots/changelog_streams__notes_file_dash_stdout.snap
---
source: crates/monochange_integration_tests/tests/changelog_streams.rs
expression: "normalize_head_commit(workspace.path(), output)"
---
## sdk 2.0.0 (2026-09-02)

### App features

- **Preview collectible art before publishing.** Creators can review artwork and metadata before making a project live.
  _Owner:_ test · _Introduced in:_ [COMMIT]
