crates/monochange_integration_tests/tests/snapshots/changelog_streams__notes_user_json_stdout.snap
---
source: crates/monochange_integration_tests/tests/changelog_streams.rs
expression: normalized_json
---
{
  "sections": [
    {
      "collapsed": false,
      "entries": [
        {
          "bump": "minor",
          "change_type": "app_feature",
          "details_markdown": "Creators can review artwork and metadata before making a project live.",
          "provenance": {
            "change_owner": {
              "label": "test"
            },
            "changeset_path": ".changeset/user.md",
            "introduced_commit": {
              "label": "[COMMIT]"
            },
            "source_path": ".changeset/user.md"
          },
          "stream": "user",
          "style": "compact",
          "summary": "Preview collectible art before publishing"
        }
      ],
      "title": "App features"
    }
  ],
  "summary": [],
  "title": "sdk 2.0.0 (2026-09-02)"
}
