crates/monochange_integration_tests/tests/snapshots/changelog_streams__user_release_note_entry.snap
---
source: crates/monochange_integration_tests/tests/changelog_streams.rs
expression: "user_notes[\"sections\"][0][\"entries\"][0].as_str().unwrap_or_else(||\npanic!(\"user release-note entry\"))"
---
#### preview collectible art before publishing

Creators can review artwork and metadata before making a project live.

_Owner:_ test · _Introduced in:_ `[COMMIT]`
